--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap-vue": "^2.20.1",
     "core-js": "^3.6.5",
     "pg": "^8.5.1",
+    "uuid": "^8.3.2",
     "vue": "^2.6.11",
     "vue-router": "^3.4.9"
   },
