--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap-vue": "^2.20.1",
     "core-js": "^3.6.5",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.2",
     "pg": "^8.5.1",
     "uuid": "^8.3.2",
     "vue": "^2.6.11",
