--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
-  "dependencies": {\
+  "dependencies": {
     "bcrypt": "^5.0.0",
     "bootstrap": "^4.5.3",
     "bootstrap-vue": "^2.20.1",
